src/objects/sma__MAScheduledJob__c.object
<CustomObject>
    <fields>
        <fullName>sma__ApexClassName__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>MapAnything Scheduled Jobs</relationshipLabel>
        <relationshipName>ScheduledJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__JobId__c</fullName>
        <label>JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Scheduled Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>